--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -10,68 +10,12 @@
           %a#questions_tab_link{ data: { tab: "questions_tab" }, title: "Creative Responses"}  Creative Response
         %li
           %a#achievement_tab_link{ data: { tab: "achievements_tab" }, title: "Tasks"} Tasks      
+      
       %div#arena_tab.tab_content{style:"margin-left:12px;"}
         - if @enrollment.contribution_unlocked?
-          %div.editor_view{ style: "display: none; height:100%;" }
-            = form_for(@current_section.tasks.new, remote: true, html: { style: "width:599px; padding:0; height:90%; margin-top:-10px;" }) do |f|
-              %div.step1
-                = f.hidden_field(:answer_type, value: Task::MULTIPLE)
-                = f.hidden_field(:section_id, value: @current_section.id)
-                = f.hidden_field(:source, value: "launchpad")
-                %fieldset{style: "display: inline-block; margin-right:15px; width:58.1%;"}
-                  %legend Create an Arena question
-                  %span.help-block What's your question?
-                  = f.text_area(:question, rows: 2, class: "rows2", placeholder:"Question...", style:"width:100%;")
-                  %span.help-block What are the possible answers?
-                  %label Correct answer
-                  = f.text_field(:answer1, placeholder: "Required", style:"margin-left:17px;")
-                  %label Wrong answer
-                  = f.text_field(:answer2, placeholder: "Required", style:"margin-left:22px;")
-                  %label Wrong answer
-                  = f.text_field(:answer3, placeholder: "Optional", style:"margin-left:22px;")
-                  %label Wrong answer
-                  = f.text_field(:answer4, placeholder: "Optional", style:"margin-left:22px;")
-                  %span.error_message
-                  %a.next.button.button-actionable{ href: "#", style:"float:right;"} Next
-                %div{style: "display:inline-block; margin-left:20px; vertical-align:top; width:199px; border-left: 1px solid #E7E7E7; position:relative; top:48px; padding-left:10px"}
-                  %h4 
-                    %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style:"height:25px; width:25px;", alt: "Tip"}
-                    Tips:
-                  %ul{style:"font-size:13px;"}
-                    %li Questions should cover the core knowledge area of the section they're placed.
-                    %li Keep the tone informal but direct.
-                    %li Make sure you check for spelling and grammar.
-                    %li 
-                      You <strong>earn #{Task::CREATOR_AWARD_POINTS.to_s} points</strong> per published question.
-              %div.step2{ style: "display: none;" }
-                %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
-                  %legend{style:"margin-bottom:5px; "} Create an Arena question
-                  %h4{style:"margin-top:12px; font-size:14px;"} Your question:
-                  %div{style:"margin-left:12px;"}
-                    %pre
-                      %span.question{style:"font-weight:bold;font-size:14px;"}
-                  %h4{style:"margin-top:12px; font-size:14px;"} Correct answer:
-                  %div{style:"margin-left:12px;"}
-                    %span.correct_answer{style:"font-weight:bold;font-size:14px;"}
-                  %h4{style:"margin-top:12px; font-size:14px; "} Here's where this Arena question will appear:
-                  %div{style:"margin-left:12px;"}
-                    %span{style:" font-size:14px;"} Challenge:
-                    %span{style:"font-weight:bold;font-size:14px;"} #{@current_section.path.name}
-                    %br/
-                    %span{style:" font-size:14px;"} Section: 
-                    %span{style:"font-weight:bold;font-size:14px;"} #{@current_section.name}
-                  %h4{style:"margin-top:12px; font-size:14px; margin-bottom:5px;"} Ready to post?
-                  %a.back.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Back
-                  = f.submit("Yes!", class: "button button-actionable", style: "float:right;")
-              %div.step3{ style: "display: none;" }
-                %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", style:"height:45px;", alt: "Stoney"}
-                %span{style:"position:relative; top:7px; font-size:30px;"} Nice work!
-                %h4{style:"margin-top:12px; font-size:16px;"} Your question is now visible to the MetaBright community!
-                %h4{style:"margin-top:12px; font-size:16px; margin-bottom:12px;"} You earn #{Task::CREATOR_AWARD_POINTS.to_s} points every time you publish a question!
-                %a.restart.button.button-actionable{ href: "#", style:"float:right; margin-bottom:10px; text-shadow:none;"} Create another question
-                %a.finish.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Finish
+          = render "tasks/new_multiple_choice", section: @current_section
         %div.task_view
-          %div.launchpadtip
+          %div.tip
             %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", alt: "Tip"}
             %p Enter the Arena and take multiple-choice questions to discover where you stand. 
           - tasks_completed = @core_tasks.select{ |t| not t.status_id.nil? }.size > 0
@@ -90,73 +34,12 @@
               %p Arena questions are added daily. When more are available, you can return here to take them. Complete <strong>Tasks</strong> or answer some <strong>Creative Responses</strong> to earn more points and continue to level up. 
           - else
             %p= link_to "Start", start_section_path(@current_section), class: "button button-actionable"            
+      
       %div#questions_tab.tab_content{ style: "" }
         - if @enrollment.contribution_unlocked?
-          %div.editor_view{ style: "display: none; height:100%;" }
-            = form_for(@current_section.tasks.new, remote: true, html: { style: "width:600px; padding:0 0 0 10px; height:90%; margin-top:-10px;" }) do |f|
-              %div.step1
-                = f.hidden_field(:answer_type, value: Task::CREATIVE)
-                = f.hidden_field(:section_id, value: @current_section.id)
-                = f.hidden_field(:source, value: "launchpad")
-                %fieldset{style: "display: inline-block; margin-right:28px; width:56%;"}
-                  %legend Create a CR
-                  %span.help-block What's your question?
-                  = f.text_area(:question, rows: 2, class: "rows2", placeholder:"Question...", style:"width:100%;")
-                  %div.control-group{style:"width:350px;"}
-                    %div.controls
-                      = render "stored_resources/new_image"
-                  %span.help-block{style: "margin-top:20px;"} What type of response should people give?
-                  %label.radio
-                    = f.radio_button(:answer_sub_type, Task::TEXT, class: "answer_sub_type")
-                    = Task::SUBTYPES[Task::TEXT]
-                  %label.radio
-                    = f.radio_button(:answer_sub_type, Task::IMAGE, class: "answer_sub_type")
-                    = Task::SUBTYPES[Task::IMAGE]
-                  %label.radio
-                    = f.radio_button(:answer_sub_type, Task::YOUTUBE, class: "answer_sub_type")
-                    = Task::SUBTYPES[Task::YOUTUBE]
-                  %span.error_message
-                  %a.next.button.button-actionable{ href: "#", style:"float:right;"} Next
-                %div{style: "display:inline-block; margin-left:20px; vertical-align:top; width:200px; border-left: 1px solid #E7E7E7; position:relative; top:48px; padding-left:10px"}
-                  %h4 
-                    %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style:"height:25px; width:25px;", alt: "Tip"}
-                    Tips:
-                  %ul{style:"font-size:13px;"}
-                    %li Questions should enable people to demonstrate their knowledge or passion for the Challenge.
-                    %li Keep the tone informal but direct.
-                    %li Make sure you check for spelling and grammar.
-                    %li 
-                      You <strong>earn #{Task::CREATOR_AWARD_POINTS.to_s} points</strong> per published question.
-              %div.step2{ style: "display: none;" }
-                %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
-                  %legend{style:"margin-bottom:5px; "} Create a CR
-                  %h4{style:"margin-top:12px; font-size:14px;"} Your question:
-                  %div{style:"margin-left:12px;"}
-                    %pre
-                      %span.question{style:"font-weight:bold;font-size:14px;"}
-                  %h4{style:"margin-top:12px; font-size:14px;"} Question type:
-                  %div{style:"margin-left:12px;"}
-                    %span.task_subtype{style:"font-weight:bold;font-size:14px;"} 
-                  %h4{style:"margin-top:12px; font-size:14px; "} Here's where this question will appear:
-                  %div{style:"margin-left:12px;"}
-                    %span{style:" font-size:14px;"} Challenge:
-                    %span{style:"font-weight:bold;font-size:14px;"} #{@current_section.path.name}
-                    %br/
-                    %span{style:" font-size:14px;"} Section: 
-                    %span{style:"font-weight:bold;font-size:14px;"} #{@current_section.name}
-                  %h4{style:"margin-top:12px; font-size:14px; margin-bottom:5px;"} Ready to post?
-                  %a.back.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Back
-                  = f.submit("Yes!", class: "button button-actionable", style: "float:right;")
-              %div.step3{ style: "display: none;" }
-                %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", style:"height:45px;", alt: "Stoney"}
-                %span{style:"position:relative; top:7px; font-size:30px;"} Nice work!
-                %h4{style:"margin-top:12px; font-size:16px;"} Your CR is now visible to the MetaBright community!
-                %h4{style:"margin-top:12px; font-size:16px;"} You earn #{Task::CREATOR_AWARD_POINTS.to_s} points every time you publish a CR!
-                %h4{style:"margin-top:12px; font-size:16px; margin-bottom:12px;"} If you'd like, you can <a class="take">post a response</a> to your CR now. 
-                %a.restart.button.button-actionable{ href: "#", style:"float:right; margin-bottom:10px; text-shadow:none;"} Create another question
-                %a.finish.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Finish
+          = render "tasks/new_creative_response", section: @current_section
         %div.task_view
-          %div.launchpadtip{style:"margin-bottom:20px;"}
+          %div.tip
             %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", alt: "Tip"}
             %p Creative Responses let you demonstrate your skills. Responses to CR's appear in the stream so they can be voted and commented upon.
           - if @challenge_tasks.empty?
@@ -170,63 +53,15 @@
                   %td.question_status
                     - if t.status_id
                       = link_to "Completed", profile_path(current_user.username, task: t.id), class: "label label-success", style:"position:relative; top:3px;", target: "_blank"
-                      %div.launchpadpoints= t.points_awarded.to_i.to_s + " points"
+                      %span.points= t.points_awarded.to_i.to_s + " points"
                     - else
                       = link_to "Incomplete", take_section_path(@current_section, task_id: t.id), class: "label label-important"
+      
       %div#achievements_tab.tab_content{ style: "display: none;" }
         - if @enrollment.contribution_unlocked?
-          %div.editor_view{ style: "display: none; height:100%;" }
-            = form_for(@current_section.tasks.new, remote: true, html: { style: "width:600px; padding:0 0 0 10px; height:90%; margin-top:-10px;" }) do |f|
-              %div.step1
-                = f.hidden_field(:answer_type, value: Task::CHECKIN)
-                = f.hidden_field(:section_id, value: @current_section.id)
-                = f.hidden_field(:source, value: "launchpad")
-                %fieldset{style: "display: inline-block; margin-right:28px; margin-bottom:150px; width:56%;"}
-                  %legend Create a Task
-                  %span.help-block What's the Task?
-                  = f.text_area(:question, rows: 2, class: "rows2", placeholder:"Task...", style:"width:100%;")
-                  %div.control-group
-                    %div.controls{ style: "width: 350px;" }
-                      %p
-                        Tasks require proof of completion in the form of a URL or image.          
-                  %span.error_message
-                  %a.next.button.button-actionable{ href: "#", style:"float:right;"} Next
-                %div{style: "display:inline-block; margin-left:20px; vertical-align:top; width:200px; border-left: 1px solid #E7E7E7; position:relative; top:48px; padding-left:10px"}
-                  %h4 
-                    %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style:"height:25px; width:25px;", alt: "Tip"}
-                    Tips:
-                  %ul{style:"font-size:13px;"}
-                    %li If you select "Any valid website", users will also be given a chance to upload an image as proof they completed the task.
-                    %li Tasks should serve as a path to improving at the section.
-                    %li 
-                      You <strong>earn #{Task::CREATOR_AWARD_POINTS.to_s} points</strong> per published Task.
-              %div.step2{ style: "display: none;" }
-                %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
-                  %legend{style:"margin-bottom:5px; "} Create a Task
-                  %h4{style:"margin-top:12px; font-size:14px;"} Your new Task:
-                  %div{style:"margin-left:12px;"}
-                    %pre
-                      %span.question{style:"font-weight:bold;font-size:14px;"}
-                  %h4{style:"margin-top:12px; font-size:14px; "} Here's where this Task will appear:
-                  %div{style:"margin-left:12px;"}
-                    %span{style:" font-size:14px;"} Challenge:
-                    %span{style:"font-weight:bold;font-size:14px;"} #{@current_section.path.name}
-                    %br/
-                    %span{style:" font-size:14px;"} Section: 
-                    %span{style:"font-weight:bold;font-size:14px;"} #{@current_section.name}
-                  %h4{style:"margin-top:12px; font-size:14px; margin-bottom:5px;"} Ready to post?
-                  %a.back.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Back
-                  = f.submit("Yes!", class: "button button-actionable", style: "float:right;")
-              %div.step3{ style: "display: none;" }
-                %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", style:"height:45px;", alt: "Stoney"}
-                %span{style:"position:relative; top:7px; font-size:30px;"} Nice work!
-                %h4{style:"margin-top:12px; font-size:16px;"} Your Task is now visible to the MetaBright community!
-                %h4{style:"margin-top:12px; font-size:16px;"} You earn #{Task::CREATOR_AWARD_POINTS.to_s} points every time you publish a Task!
-                %h4{style:"margin-top:12px; font-size:16px; margin-bottom:12px;"} If you've already personally completed this Task, you can <a class="take">mark it as complete</a> now. 
-                %a.restart.button.button-actionable{ href: "#", style:"float:right; margin-bottom:10px; text-shadow:none;"} Create another Task
-                %a.finish.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Finish
+          = render "tasks/new_task", section: @current_section
         %div.task_view
-          %div.launchpadtip
+          %div.tip
             %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", alt: "Tip"}
             %p Use Tasks to verify the things you've done and guide you towards what to do next. 
           - if @achievement_tasks.empty?
@@ -244,7 +79,7 @@
                     - if t.status_id
                       = link_to "Completed", profile_path(current_user.username, task: t.id), class: "label label-success", style:"position:relative; top:3px;", target: "_blank"
                       %br
-                      %div.launchpadpoints{style:"margin-right:4px;"}= t.points_awarded.to_i.to_s + " points"
+                      %div.points{style:"margin-right:4px;"}= t.points_awarded.to_i.to_s + " points"
                     - else
                       = link_to "Incomplete", take_section_path(@current_section, task_id: t.id), class: "label label-important"
 
