--- a/app/views/modals/_launchpad.html.haml
+++ b/app/views/modals/_launchpad.html.haml
@@ -11,10 +11,13 @@
         %span{style:"font-size:14px;"} #{@enrollment.points_to_next_level} pts to level up
         %div.progress.progress-success.progress-striped{style:"height:10px; margin-bottom:0;"}
           %div.bar{style:"width: #{@enrollment.level_percent}%;" }
-    / Hear lies achievements
-    %div.launchpadcontent{ style: ("display: none;" if @achievements) }
+    
+    = render "modals/headlines/contribution"
+    
+    %div.launchpadcontent{ style: "display: none;" }
       %div.launchpadsectioncolumn
-        %h3 Sections
+        %h3
+          Sections
         %ul
           - @path.sections.all(order: "id ASC").each do |s|
             %li.launchpad_link{ title:"#{s.name}"}
