--- a/app/views/tasks/_new_creative_response.haml
+++ b/app/views/tasks/_new_creative_response.haml
@@ -1,5 +1,5 @@
-%div.editor_view{ style: "height:100%;" }
-  = form_for(section.tasks.new, remote: true, html: { style: "width:600px; padding:0 0 0 10px; height:90%; margin-top:-10px;" }) do |f|
+%div.editor_view.hide
+  = form_for(section.tasks.new, remote: true) do |f|
     %div.step1
       = f.hidden_field(:answer_type, value: Task::CREATIVE)
       = f.hidden_field(:section_id, value: section.id)
@@ -36,21 +36,21 @@
     
     %div.step2.hide
       %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
-        %legend{style:"margin-bottom:5px; "} Create a CR
-        %h4{style:"margin-top:12px; font-size:14px;"} Your question:
+        %legend Create a CR
+        %h4 Your question:
         %div{style:"margin-left:12px;"}
           %code.content.question
-        %h4{style:"margin-top:12px; font-size:14px;"} Question type:
+        %h4 Question type:
         %div{style:"margin-left:12px;"}
           %span.task_subtype{style:"font-weight:bold;font-size:14px;"} 
-        %h4{style:"margin-top:12px; font-size:14px; "} Here's where this question will appear:
+        %h4 Here's where this question will appear:
         %div{style:"margin-left:12px;"}
           %span{style:" font-size:14px;"} Challenge:
           %span{style:"font-weight:bold;font-size:14px;"} #{section.path.name}
           %br/
           %span{style:" font-size:14px;"} Section: 
           %span{style:"font-weight:bold;font-size:14px;"} #{section.name}
-        %h4{style:"margin-top:12px; font-size:14px; margin-bottom:5px;"} Ready to post?
+        %h4{ style:"margin-bottom:5px;" } Ready to post?
         %a.back.button.button-standard{ href: "#", style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Back
         = f.submit("Yes!", class: "button button-actionable", style: "float:right;")
     
