--- a/app/views/tasks/_new_multiple_choice.html.haml
+++ b/app/views/tasks/_new_multiple_choice.html.haml
@@ -32,27 +32,27 @@
     
     %div.step2.hide
       %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
-        %legend{style:"margin-bottom:5px; "} Create an Arena question
-        %h4{style:"margin-top:12px; font-size:14px;"} Your question:
+        %legend Create an Arena question
+        %h4 Your question:
         %div{style:"margin-left:12px;"}
-          %code.content.question{ style:"font-weight:bold;font-size:14px;" }
-        %h4{style:"margin-top:12px; font-size:14px;"} Correct answer:
+          %code.content.question
+        %h4 Correct answer:
         %div{style:"margin-left:12px;"}
-          %span.correct_answer{style:"font-weight:bold;font-size:14px;"}
-        %h4{style:"margin-top:12px; font-size:14px; "} Here's where this Arena question will appear:
+          %span.correct_answer
+        %h4 Here's where this Arena question will appear:
         %div{style:"margin-left:12px;"}
           %span{style:" font-size:14px;"} Challenge:
           %span{style:"font-weight:bold;font-size:14px;"} #{section.path.name}
           %br/
           %span{style:" font-size:14px;"} Section: 
           %span{style:"font-weight:bold;font-size:14px;"} #{section.name}
-        %h4{style:"margin-top:12px; font-size:14px; margin-bottom:5px;"} Ready to post?
+        %h4{ style: "margin-bottom:5px;" } Ready to post?
         %a.back.button.button-standard{ style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;" } Back
         = f.submit("Yes!", class: "button button-actionable", style: "float:right;")
     
     %div.step3.hide
       %span{ style:"position:relative; top:7px; font-size:30px;"} Nice work!
-      %h4{ style:"margin-top:12px; font-size:16px;"} Your question is now visible to the MetaBright community!
-      %h4{ style:"margin-top:12px; font-size:16px; margin-bottom:12px;"} You earn #{Task::CREATOR_AWARD_POINTS.to_s} points every time you publish a question!
+      %h4 Your question is now visible to the MetaBright community!
+      %h4{ style: "margin-bottom:12px;" } You earn #{Task::CREATOR_AWARD_POINTS.to_s} points every time you publish a question!
       %a.restart.button.button-actionable{ style:"float:right; margin-bottom:10px; text-shadow:none;"} Create another question
       %a.finish.button.button-standard{ style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Finish
