--- a/app/views/tasks/_new_task.html.haml
+++ b/app/views/tasks/_new_task.html.haml
@@ -1,5 +1,5 @@
-%div.editor_view{ style: "display: none; height:100%;" }
-  = form_for(section.tasks.new, remote: true, html: { style: "width:600px; padding:0 0 0 10px; height:90%; margin-top:-10px;" }) do |f|
+%div.editor_view.hide
+  = form_for(section.tasks.new, remote: true) do |f|
     %div.step1
       = f.hidden_field(:answer_type, value: Task::CHECKIN)
       = f.hidden_field(:section_id, value: @current_section.id)
@@ -19,33 +19,32 @@
           %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style:"height:25px; width:25px;", alt: "Tip"}
           Tips:
         %ul{style:"font-size:13px;"}
-          %li If you select "Any valid website", users will also be given a chance to upload an image as proof they completed the task.
-          %li Tasks should serve as a path to improving at the section.
+          %li Tasks should serve as a record for what people have already done and a guide for improvement.
           %li 
             You <strong>earn #{Task::CREATOR_AWARD_POINTS.to_s} points</strong> per published Task.
     
     %div.step2.hide
       %fieldset{style: "display: inline-block; margin-right:28px; width:99%;"}
-        %legend{style:"margin-bottom:5px; "} Create a Task
-        %h4{style:"margin-top:12px; font-size:14px;"} Your new Task:
+        %legend Create a Task
+        %h4 Your new Task:
         %div{style:"margin-left:12px;"}
           %code.content.question
-        %h4{style:"margin-top:12px; font-size:14px; "} Here's where this Task will appear:
+        %h4 Here's where this Task will appear:
         %div{style:"margin-left:12px;"}
           %span{style:" font-size:14px;"} Challenge:
           %span{style:"font-weight:bold;font-size:14px;"} #{@current_section.path.name}
           %br/
           %span{style:" font-size:14px;"} Section: 
           %span{style:"font-weight:bold;font-size:14px;"} #{@current_section.name}
-        %h4{style:"margin-top:12px; font-size:14px; margin-bottom:5px;"} Ready to post?
+        %h4{style:"margin-bottom:5px;"} Ready to post?
         %a.back.button.button-standard{ style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Back
         = f.submit("Yes!", class: "button button-actionable", style: "float:right;")
     
     %div.step3.hide
       %img{src:"https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", style:"height:45px;", alt: "Stoney"}
       %span{style:"position:relative; top:7px; font-size:30px;"} Nice work!
-      %h4{style:"margin-top:12px; font-size:16px;"} Your Task is now visible to the MetaBright community!
-      %h4{style:"margin-top:12px; font-size:16px;"} You earn #{Task::CREATOR_AWARD_POINTS.to_s} points every time you publish a Task!
-      %h4{style:"margin-top:12px; font-size:16px; margin-bottom:12px;"} If you've already personally completed this Task, you can <a class="take">mark it as complete</a> now. 
+      %h4 Your Task is now visible to the MetaBright community!
+      %h4 You earn #{Task::CREATOR_AWARD_POINTS.to_s} points every time you publish a Task!
+      %h4{ style:"margin-bottom:12px;" } If you've already personally completed this Task, you can <a class="take">mark it as complete</a> now. 
       %a.restart.button.button-actionable{ style:"float:right; margin-bottom:10px; text-shadow:none;"} Create another Task
       %a.finish.button.button-standard{ style:"float:left; margin-bottom:10px; text-shadow:none; color:#333;"} Finish
