edits to creator unlock

--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -405,7 +405,7 @@ ul.inlinedisplay div.mosaic-block.bar2 { height: 130px; }
 #ideapage .leftboxheader {margin-bottom:-7px;}
 #ideapage .leftboxheader span{text-transform:none;}
 #ideapage .leftboxheader a{text-decoration:none; text-transform:none; cursor:pointer;}
-.submit_idea .help-block {font-size:16px;}
+.submit_idea .help-block, .editor_view .help-block {font-size:16px;}
 .submit_idea>h2 {margin-bottom:20px;}
 .submit_idea_tips {display:inline-block; margin: 52px 0 0 50px; vertical-align:top; width:400px; border-left: 1px solid #E7E7E7; padding-left:10px;}
 .submit_idea_tips ul {font-size:16px; margin-top:10px;}
