--- a/app/views/tasks/_new_multiple_choice.html.haml
+++ b/app/views/tasks/_new_multiple_choice.html.haml
@@ -24,9 +24,8 @@
           %img{ src:"https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", alt: "Tip"}
           Tips:
         %ul
-          %li Questions should cover the core knowledge area of the section they're placed.
           %li Keep the tone informal but direct.
-          %li Make sure you check for spelling and grammar.
+          %li Check for spelling and grammar.
           %li 
             You <strong>earn #{Task::CREATOR_AWARD_POINTS.to_s} points</strong> per published question.
     
