--- a/app/assets/stylesheets/launchpad.css.scss
+++ b/app/assets/stylesheets/launchpad.css.scss
@@ -9,7 +9,7 @@
   padding: 11px 11px 0 11px; 
   background-color: #F9F9F9;
   
-  h1 { font: bold 23px 'Muli', sans-serif; margin:0px; width:868px; padding:0px; }
+  h1 { font: bold 23px 'MuliRegular', sans-serif; margin:0px; width:868px; padding:0px; }
   h1>img { border-radius:4px; height:36px; width:36px; }
   h1>div { position:relative; bottom:8px; display:inline;}
   
@@ -125,14 +125,18 @@
     min-height: 275px;
     
     .header {
-      img { float: left; height: 100px; margin: -13px 0 0 -10px; }
-      h1 { font-size: 47px; font-weight: normal; width: inherit;  display: inline-block; }
-      h2 { font-size: 22px; line-height: 28px; display: inline-block; }
+      img { height: 115px; margin: -13px 0 0 -10px; display: inline-block; vertical-align: top; }
+      h1 { font-size: 47px; font-weight: normal; width: inherit; }
+      h2 { font-size: 25px; line-height: 25px; }
+      div { display: inline-block; }
     }
+    .help-block { margin-bottom: 10px; } 
+    textarea { margin-bottom: 10px; }
     .body { margin: 5px auto; }
     .exit {
       float: right; margin-top: 5px;
-      a { font-size: 15px; }
+      a { font-size: 15px; }   
+    
     }
   }
 }
