--- a/app/assets/stylesheets/launchpad.css.scss
+++ b/app/assets/stylesheets/launchpad.css.scss
@@ -114,7 +114,7 @@
     }
   }
   
-  #headlines {
+  .headlines {
     background-color:white; 
     border: 1px solid rgba(0,0,0,.1);
     border-radius: 6px; 
