--- a/app/views/modals/headlines/_achievements.haml
+++ b/app/views/modals/headlines/_achievements.haml
@@ -1,26 +1,29 @@
-- new_level = @achievements[0]
-- new_rank = @achievements[1]
-%div#headlines
+.headlines.hide
   .header
     = image_tag STONEY_SMALL_URL, style: "display: inline-block; vertical-align: middle", alt: "Stoney"
     %h1 Congratulations!              
-    %h2
+    %h2{ style: "width: 80%" }
+      - new_level = @achievements[:level]
+      - new_rank = @achievements[:rank]
       - if new_level && new_rank
         You just leveled up and reached the Top #{new_rank}!
+        - subtext = "You've reached Level #{new_level} and are now ranked #{@enrollment.rank.ordinalize} in the #{@path.name} Challenge!"
         - sharing_text = "Just leveled up and made it into the Top #{new_rank} in the #{@path.name} Challenge on @MetaBright!" 
       - elsif new_level
-        You've jumped to Level #{new_level}!
-        - sharing_text = "Just made it to level #{new_level} in the #{@path.name} Challenge on @MetaBright!"
+        You've reached a new Level!
+        - subtext = "You've reached Level #{new_level} the #{@path.name} Challenge!"
+        - sharing_text = "Just made it to Level #{new_level} in the #{@path.name} Challenge on @MetaBright!"
       - elsif new_rank
         You just reached the Top #{new_rank}!
+        - subtext = "You're now ranked #{@enrollment.rank.ordinalize} in the #{@path.name} Challenge!"
         - sharing_text = "Just broke the Top #{new_rank} in the #{@path.name} Challenge on @MetaBright!"
       
-  .body{ style: "text-align: middle; margin: 0 0 15px 27px;" }
-    %p{ style: "font-size: 17px;" } You deserve a round of applause. In fact, you deserve a standing ovation. Share this achievement and brag to your friends.
+  .body{ style: "text-align: middle; margin: 20px 0 17px 27px;" }
+    %p{ style: "font-size: 17px; margin-bottom: 20px;" } #{subtext} Share this achievement and brag to your friends.
     %div{ style: "margin-top: 15px;" }
       %button.button.button-actionable.button-large{ style: "margin-right: 10px;", onclick: sharing_popup_javascript(:google_plus, challenge_url(@path.permalink), sharing_text) } Share on Google+
       %button.button.button-standard.button-large{ style: "margin-right: 10px;", onclick: sharing_popup_javascript(:facebook, challenge_url(@path.permalink), sharing_text) } Share on Facebook
       %button.button.button-info.button-large{ onclick: sharing_popup_javascript(:twitter, challenge_url(@path.permalink), sharing_text) } Share on Twitter
   
   .exit{ style: "float: right; margin-top: 30px;" }
-    %a{ onclick: "$('#headlines').fadeOut(300, function(){ $('.launchpadcontent').show(); });" } Continue to Launchpad »
+    %a{ onclick: "$(this).parents('.headlines').fadeOut(300, function(){ $(this).remove(); if($('.headlines').size() > 0){ $('.headlines:first').show() } else { $('.launchpadcontent').show(); } });" } Continue to Launchpad »
