--- a/app/views/sections/finish.html.haml
+++ b/app/views/sections/finish.html.haml
@@ -10,7 +10,7 @@
     %div.completionmessagespace
       %div.completionheader
         %span Nice work!
-      %div.completionsubheader You just earned <strong>#{@section.points_earned(current_user)} points</strong> in this section!
+      %div.completionsubheader You've earned <strong>#{@section.points_earned(current_user)} points</strong> in this section!
       %div.completionstats
         %p Total Challenge points: <strong>#{@enrollment.total_points}</strong>
         %p Current level: <strong>#{@enrollment.level}</strong>
